# nao_v5_shri_modules

./: README.md
nao_shri_bringup/: CMakeLists.txt  package.xml
nao_shri_render/: CMakeLists.txt  package.xml
nao_shri_render/config/: motions.yaml  motions_v1.yaml
nao_shri_render/data/sm_motion/: .manifest.xml.13858.csp  manifest.xml  motion.pml
nao_shri_render/data/sm_motion/advice/motion1/: behavior.xar
nao_shri_render/data/sm_motion/advice/motion2/: behavior.xar
nao_shri_render/data/sm_motion/advice/motion3/: behavior.xar
nao_shri_render/data/sm_motion/advice/motion4/: behavior.xar
nao_shri_render/data/sm_motion/attention/motion1/: behavior.xar
nao_shri_render/data/sm_motion/attention/motion2/: behavior.xar
nao_shri_render/data/sm_motion/attention/motion3/: behavior.xar
nao_shri_render/data/sm_motion/attention/motion4/: behavior.xar
nao_shri_render/data/sm_motion/attention/motion5/: behavior.xar
nao_shri_render/data/sm_motion/attention/motion6/: behavior.xar
nao_shri_render/data/sm_motion/command/motion1/: behavior.xar
nao_shri_render/data/sm_motion/command/motion2/: behavior.xar
nao_shri_render/data/sm_motion/command/motion3/: behavior.xar
nao_shri_render/data/sm_motion/command/motion4/: behavior.xar
nao_shri_render/data/sm_motion/consolation/motion1/: behavior.xar
nao_shri_render/data/sm_motion/consolation/motion2/: behavior.xar
nao_shri_render/data/sm_motion/consolation/motion3/: behavior.xar
nao_shri_render/src/: render_facial_expression.py  render_gaze.py  render_gesture.py  render_idle_behavior.py  render_speech.py
(+60 files in other folders)
